# bah2015_registration

./: .gitignore  LICENSE  README.md
analysis_obj/: analysis_obj.py  tmp.vtk
matching_area/: analysis_tif.py  do.sh  matching_area.py  result.txt
matching_area/result/: adra1b.txt  car8.txt  dtl.txt  eral1.txt  klf12.txt  klf12_2.txt  nlgn1.txt  pax6.txt  pax6_2.txt  plxdc2.txt  prlr.txt  vim.txt
slice_registration/: CMakeLists.txt  simple_affine.cxx  simple_affine2.cxx
slice_registration/test_data/: CD21594.1-Prlr.tif
vtk_test/: calc_intensity_all.sh  draw_brain.py  draw_intensity.py  draw_mothbrain.py  draw_segmentation.py  interactive_intensity.py  mousebrain_small.mtl  mousebrain_small1000.vtk  plot.vtk  plot2.vtk  slice.mtl
